# deputy-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: architecture.md  build-in-public.md  eval_results.md  packaging.md  phase3_mcp_and_rag.md  spike_results.md
docs/media/: README.md
sample_workspace/: calendar.json  reading.md
sample_workspace/meetings/: 2026-07-08-review.md
sample_workspace/projects/: deputy.md
sample_workspace/recipes/: weeknight-pasta.md
scripts/: Deputy.command  com.deputy.app.plist
src/deputy/: __init__.py  __main__.py  actions.py  agent.py  app.py  approvals.py  audit.py  config.py  critic.py  demo.py  events.py  model.py  prompts.py  routing.py  tools.py
src/deputy/eval/: __init__.py  __main__.py  environment.py  grading.py  harness.py  metrics.py  (+4 more)
tests/: test_actions.py  test_agent.py  test_approvals.py  test_audit.py  test_config.py  test_eval_environment.py  test_eval_grading.py  test_eval_harness.py  test_eval_metrics.py  test_eval_model.py  test_eval_report.py  test_integration.py  test_mcp_adapter.py  test_mcp_host.py  test_model.py  test_prompts.py  test_rag_chunk.py  test_rag_index.py  test_rag_search.py  test_rag_store.py  test_registry.py  test_routing.py  test_servers_calendar.py  test_servers_files.py  test_servers_notes.py  test_servers_web.py  test_tools.py  test_validation.py  test_web.py  test_web_launcher.py
web-demo/: .gitignore  README.md  index.html  package.json  style.css
web-demo/js/: agent.js  app.js  data.js  llm.js  prompts.js  scenarios.js  theme.js  tools.js  ui.js  util.js
web-demo/test/: parse.test.mjs
(+30 files in other folders)
